# CircuitPython_SynthMenu

./: README.rst  optional_requirements.txt  pyproject.toml  requirements.txt
.github/workflows/: release_gh.yml
docs/: api.rst  conf.py  examples.rst  index.rst
examples/: synthmenu_character_lcd.py  synthmenu_displayio.py  synthmenu_picosynthsandbox.py  synthmenu_simpletest.py
examples/picoslidertoy/: synthmenu_picoslidertoy.py  touchslider.py
synthmenu/: __init__.py  character_lcd.py  displayio.py
