# SPDX-FileCopyrightText: 2022 Alec Delaney, written for Adafruit Industries
# SPDX-FileCopyrightText: Copyright (c) 2024 Cooper Dalrymple
#
# SPDX-License-Identifier: MIT

[build-system]
requires = [
    "setuptools",
    "wheel",
    "setuptools-scm",
]

[project]
name = "circuitpython-synthmenu"
description = "Menu management and display library"
version = "0.0.0+auto.0"
readme = "README.rst"
authors = [
    {name = "Cooper Dalrymple", email = "me@dcdalrymple.com"}
]
urls = {Homepage = "https://github.com/dcooperdalrymple/CircuitPython_SynthMenu"}
keywords = [
    "adafruit",
    "blinka",
    "circuitpython",
    "micropython",
    "synthmenu",
    "menu",
    "displayio",
    "character",
    "lcd",
    "graph",
]
license = {text = "MIT"}
classifiers = [
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Embedded Systems",
    "Topic :: System :: Hardware",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
dynamic = ["dependencies", "optional-dependencies"]

[tool.setuptools]
packages = ["synthmenu"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
optional-dependencies = {optional = {file = ["optional_requirements.txt"]}}
